Attempted to fix missing background image on mobile devices.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -23,6 +23,17 @@
   clear: both;
 }
 
+#fullscreen-bg {
+  z-index: -999;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .hide-text {
   font: 0/0 a;
   color: transparent;
